<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@android:drawable/ic_menu_help</item>
        <item>@android:drawable/ic_menu_delete</item>
        <item>@android:drawable/ic_menu_add</item>
        <item>@android:drawable/ic_btn_speak_now</item>
        <item>@android:drawable/ic_menu_share</item>
        <item>@drawable/ic_action_person</item>
        <item>@drawable/ic_action_back</item>
    </array>

    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find People</item>
        <item>Photos</item>
        <item>Communities</item>
        <item>Pages</item>
        <item>Account</item>
        <item>Esci</item>
    </string-array>

    <string name="desc_list_item_icon">Item Icon</string>
    <string name="app_name">FutstAlMind</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_username">Inserisci l\'username</string>
    <string name="hint_password">Inserisci la password</string>
    <string name="label_newUser">Sei un un nuovo utente? Registrati</string>
    <string name="text_UserNonIndicato">Attenzione! Indicare l\'username</string>
    <string name="text_PassNonIndicata">Attenzione! Indicare la password</string>
    <string name="title_activity_registrati">Registrati</string>
    <string name="label_EffettuaLogin">Sei gia\' registrato? Effettua il login</string>
    <string name="label_registratri">Registrati</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_email">Email</string>
    <string name="label_nome">Nome</string>
    <string name="label_cognome">Cognome</string>
    <string name="label_dataNascita">Data di nascita </string>
    <string name="label_luogoNascita">Luogo di nascita </string>
    <string name="label_telefono">Telefono </string>
    <string name="label_dimenticatoPsw">Dimenticato la password?</string>
    <string name="label_ricordami">Ricordami</string>
    <string name="action_salva">Salva</string>

    // activity_player_detail - label
    <string name="apd_lbl_name">Nome</string>
    <string name="apd_lbl_surname">Cognome</string>
    <string name="apd_lbl_birthdate">Data di nascita</string>
    <string name="apd_lbl_nationality">Nazionalità</string>
    <string name="apd_lbl_role">Ruolo</string>
    <string name="apd_lbl_telephonenumber">Numero di telefono</string>
    <string name="apd_lbl_email">Email</string>
    <string name="apd_lbl_jerseynumber">Numero di maglia</string>
    <string name="apd_lbl_note">Note</string>
    // activity_player_detail - label


-------------------- A R R A Y --------------------
    // array Ruoli
    <string-array name="spinner_role">
        <item>Portiere</item>
        <item>Universale</item>
        <item>Difensore</item>
        <item>Laterale</item>
        <item>Pivot</item>
    </string-array>
    // array Ruoli
    <string-array name="spinner_jerseynumber">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>
    // array numero di maglia

    // array numero di maglia

    <string-array name="spinner_anni">
        <item>Anno</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
    </string-array>
    <string-array name="spinner_mesi">
        <item>Mese</item>
        <item>Gen</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>Mag</item>
        <item>Giu</item>
        <item>Lug</item>
        <item>Ago</item>
        <item>Set</item>
        <item>Ott</item>
        <item>Nov</item>
        <item>Dic</item>
    </string-array>
    <string-array name="spinner_giorni">
        <item>Giorno</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    -------------------- A R R A Y --------------------

    <string name="title_activity_recupera_password">RecuperaPassword</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_menu_principale">MenuPrincipale</string>
    <string name="hint_email">Indicare l\'email</string>
    <string name="hint_nome">Indicare il nome</string>
    <string name="hint_cognome">Indicare il cognome</string>
    <string name="hint_luogoNascita">Indicare il luogo di nascita</string>
    <string name="hint_telefono">Indicare il telefono</string>
    <string name="label_squadra">Squadra</string>
    <string name="hint_squadra">Inserisci il nome della squadra</string>
    <string name="label_data_creazione">Data creazione</string>
    <string name="title_activity_squadra__menu">Squadra_Menu</string>
    <string name="title_activity_giocatori__dettaglio">Giocatori_Dettaglio</string>
    <string name="title_activity_campionato__dettaglio">Campionato_Dettaglio</string>
    <string name="title_activity_player_detail">Player_Detail</string>

</resources>
