<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#fff">

        <!--  Header  Starts-->
        <!--  Header Ends -->
        <!-- Footer Start -->
        <!-- Footer Ends -->

        <!-- Registration Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip">
            <!-- Full Name Label -->
            <!--  Email Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/label_password"/>
            <EditText android:id="@+id/edit_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:layout_marginBottom="20dip"
                android:inputType="textVisiblePassword|textPassword"
                android:hint="@string/hint_password" />
            <!-- Password Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/label_email" />
            <EditText android:id="@+id/edit_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="false"
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="20dp"
                android:hint="@string/hint_email" />

            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/label_nome"/>
            <EditText android:id="@+id/edit_nome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="false"
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dp"
                android:inputType="textPersonName"
                android:hint="@string/hint_nome" />
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/label_cognome"/>
            <EditText android:id="@+id/edit_cognome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="false"
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dp"
                android:inputType="textPersonName"
                android:hint="@string/hint_cognome" />

            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/label_dataNascita"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginBottom="20dp">

                <Spinner
                    android:layout_width="86dp"
                    android:layout_height="44dp"
                    android:id="@+id/spinner_giorno" />

                <Spinner
                    android:layout_width="84dp"
                    android:layout_height="44dp"
                    android:id="@+id/spinner_mese" />

                <Spinner
                    android:layout_width="84dp"
                    android:layout_height="44dp"
                    android:id="@+id/spinner_anno"
                    android:layout_weight="0.04" />

            </LinearLayout>

            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/label_luogoNascita"/>
            <EditText android:id="@+id/edit_luogoNascita"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="false"
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:hint="@string/hint_luogoNascita" />
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/label_telefono"/>
            <EditText android:id="@+id/edit_telefono"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="false"
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dp"
                android:inputType="phone"
                android:hint="@string/hint_telefono" />



            <!-- Register Button -->
            <!-- Link to Login Screen -->

        </LinearLayout>
        <!-- Registration Form Ends -->
    </RelativeLayout>
</ScrollView>