<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/imageView_player"
            android:src="@drawable/ic_action_person"
            android:contentDescription="aaa"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#372c24"
            android:text="@string/apd_lbl_name"
            android:id="@+id/textView_name"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_name"
            android:text="@string/apd_lbl_name"
            android:layout_marginTop="5dp"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#372c24"
            android:text="@string/apd_lbl_surname"
            android:id="@+id/textView_surname"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_surname"
            android:text="@string/apd_lbl_surname"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#372c24"
            android:text="@string/apd_lbl_birthdate"
            android:id="@+id/textView_birthdate"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginTop="5dp"
            android:layout_gravity="center">

            <Spinner
                android:layout_width="84dp"
                android:layout_height="44dp"
                android:id="@+id/spinner_dd" />

            <Spinner
                android:layout_width="84dp"
                android:layout_height="44dp"
                android:id="@+id/spinner_mm" />

            <Spinner
                android:layout_width="84dp"
                android:layout_height="44dp"
                android:id="@+id/spinner_yy" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#372c24"
            android:text="@string/apd_lbl_telephonenumber"
            android:id="@+id/textView_telephonenumber"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText_telephonenumber" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#372c24"
            android:text="@string/apd_lbl_email"
            android:id="@+id/textView_email"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#372c24"
            android:text="@string/apd_lbl_role"
            android:id="@+id/textView_role"
            android:layout_marginTop="10dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_role"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#372c24"
            android:text="@string/apd_lbl_jerseynumber"
            android:id="@+id/textView_jerseynumber"
            android:layout_marginTop="10dp" />

        <Spinner
            android:layout_width="84dp"
            android:layout_height="44dp"
            android:id="@+id/spinner_jerseynumber" />

    </LinearLayout>
</ScrollView>