<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#fff">

        <!--  Header  Starts-->
        <!--  Header Ends -->
        <!-- Footer Start -->
        <!-- Footer Ends -->

        <!-- Registration Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip">
            <!-- Full Name Label -->
            <!--  Email Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/label_squadra"/>
            <EditText android:id="@+id/edit_squadra"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:layout_marginBottom="20dip"
                android:inputType="textVisiblePassword|textPassword"
                android:hint="@string/hint_squadra" />
            <!-- Password Label -->

            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/label_data_creazione"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginBottom="20dp">

                <Spinner
                    android:layout_width="86dp"
                    android:layout_height="44dp"
                    android:id="@+id/spinner_giorno" />

                <Spinner
                    android:layout_width="84dp"
                    android:layout_height="44dp"
                    android:id="@+id/spinner_mese" />

                <Spinner
                    android:layout_width="84dp"
                    android:layout_height="44dp"
                    android:id="@+id/spinner_anno"
                    android:layout_weight="0.04" />

            </LinearLayout>


            <!-- Register Button -->
            <!-- Link to Login Screen -->

        </LinearLayout>
        <!-- Registration Form Ends -->
    </RelativeLayout>
</ScrollView>